app/src/test/resources/programs/invalid/variables/NoVariableKeyword.extension
foo main() -> Int = {
    x: Int = 1337;
}
